--- a/wiki/gynogenetically.wikitext
+++ b/wiki/gynogenetically.wikitext
@@ -2,3 +2,5 @@
 ===Adverb===
 '''gynogenetically'''
 # the process whereby a [[sperm]] fertilizes an [[ovum]], but does not contribute [[genetic]] material to the resultant [[zygote]]
+===Related terms===
+*[[gynogenesis]]
