--- a/wiki/planned_obsolescence.wikitext
+++ b/wiki/planned_obsolescence.wikitext
@@ -34,4 +34,30 @@ Planned obsolescence will also tend to benefit those companies with the most mod
 
 There is a tendency for people towards conservatism in their purchases, a predilection some economist believe to be excessive and harmful to the economy.  These economists would argue, for instance, that Microsoft's efforts to encourage consumers to move from [[Windows 95]] to [[Windows XP]] by withdrawing support and interoperability for the older operating system is a necessary corrective to people's natural aversion to change.
 
-<nowiki>Insert non-formatted text here</nowiki>i love u
+==Origins of the term==
+The phrase was made popular by [[Brooks Stevens]], the American industrial designer, in [[1954]]. Stevens was due to give a talk at an advertising conference in [[Minneapolis]] in 1954. Without giving it much thought he used the term as the title of his talk the next day. The title could have been interchangeable, like most of the talks he gave about his design firm.
+
+From that point on, the phrase "Planned Obsolescence" became Stevens’ catchphrase. He was challenged to define it by his audience, and he felt the need to rationalise. The official definition he came up with was: "Instilling in the buyer the desire to own something a little newer, a little better, a little sooner than is necessary." It became something that he would be repeating for the rest of his career, and he took nearly every opportunity to present his philosophy.
+
+The idea was not that there was anything wrong with the old model, but that the new one was more desirable. For example, in 1966, in one of Stevens’ talks, he said: "When I design a 1961 model car I am not styling it for the man who bought one in 1960, I’m styling it for the man next door who didn’t buy it when his neighbour did."
+
+Steven's term Planned Obsolescence was taken up by other people, and his own definition was challenged. The term seemed to take on new and alternative meanings. So what had originally been an abstract concept that Stevens had pulled from his hat had now become a concrete theory that was being scrutinized by other designers and design critics. He had only come up with a definition for it after he was challenged. But still, the philosophy of Planned Obsolescence had become a belief system that was being taken into account by industrial companies. 
+
+By the late 50s, Planned Obsolescence had become a commonly used term that people understood, although it wasn’t looked on favourably. In 1959, Volkswagen brought out an advertising campaign for their cars, and the slogan proudly read “We do not believe in planned obsolescence. We don’t change a car for the sake of change.” 
+	
+Right from the outset, Stevens had discovered by accident that the easiest way to become famous and to have his designs and his firm recognized was to gain infamy. He believed that any attention was good attention, so he relished attacks made at him by the likes of the Volkswagen Corporation.
+
+In 1960, a pop culture critic [[Vance Packard]] had a book published called “The Waste Makers”. In it he criticized Stevens for having a sinister strategy behind his theory of planned obsolescence. 
+
+To justify himself, Packard then hijacked the term Planned Obsolescence in his book and sub categorized it into two sections. The first one was Psychological Obsolescence and the second was Functional Obsolescence.
+
+Psychological Obsolescence was more or less in keeping with Stevens’ original definition, though Packard’s interpretation was that there was a sinister motive behind it. He said that the approach behind Psychological Obsolescence was to make the product “old-fashioned, conspicuously non-modern.” In other words, he said that Stevens was brainwashing the customers into believing that the old product they owned was no longer good enough, now that there was an updated, modern and more desirable version available. 
+
+The second one, Functional Obsolescence, was equally manipulative of the consumer, in Packard’s view. He said that Stevens was designing products deliberately so that they’d wear our or break in the future - the consumer would be forced to buy another one and keep Stevens in business.  Brooks Stevens had never intended his definition to be interpreted in this way, and he found himself having to defend himself against Packard’s definition of functional obsolescence.
+
+One of Vance Packard's criticisms of planning for Functional Obsolescence was related to an ethical principle. He believed that manipulating a customer into buying a new product before the old one had come to the end of its life was fuelling wastefulness. However, Brooks Stevens was not taken aback by Packard’s harsh denunciations of his design philosophy. He dismissed Packard’s book “Wastemakers” as a scare headline book. (129). He believed that all publicity was good publicity, so he was unfazed by other people’s objections, and he enjoyed the infamy.
+
+Though Stevens made the term popular, it is important to note that it was used long before the "designer of disposal" got his hands on it. Origins appear to go back as far as 1932 (possibly further) with Bernard London's [[Ending the Depression Through Planned Obsolescence]].
+
+See also: [[obsolescence]]
+[[Category:Ethics]]
