--- a/wiki/Nobel_laureate.wikitext
+++ b/wiki/Nobel_laureate.wikitext
@@ -1,4 +1,7 @@
 ==English==
+===Pronunciation===
+*[[AHD]]: /nō-bĕl' lôr'ē-ĭt/
+
 ===Noun===
-'''[[Nobel laureate]]'''
-#a person who has won a [[Nobel prize]]
+'''[[Nobel]] [[laureate]]'''
+#a person who has been awarded a [[Nobel Prize]]
