<tt> <Nobel laureate#99245>

--- a/wiki/Nobel_laureate.wikitext
+++ b/wiki/Nobel_laureate.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Pronunciation===
-*[[AHD]]: /nō-bĕl' lôr'ē-ĭt/
+*[[AHD]]: <tt>/nō-bĕl' lôr'ē-ĭt/</tt>
 
 ===Noun===
 '''[[Nobel]] [[laureate]]'''
