--- a/wiki/fat.wikitext
+++ b/wiki/fat.wikitext
@@ -126,6 +126,7 @@ The translations below need to be checked by native speakers and inserted into t
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Latin: [[adeps]] ''nominative'', [[adipis]] ''genitive''
 *Spanish: [[gordo]] ''m'', [[gorda]] ''f''
 *Swedish: [[fet]], [[tjock]]
 |}
