--- a/wiki/fat.wikitext
+++ b/wiki/fat.wikitext
@@ -195,7 +195,7 @@ The translations below need to be checked by native speakers and inserted into t
 '''fat''' 
 #[[plate]] (''serving dish'')
 
-====Conjugations====
+====Declensions====
 {| border=1 cellspacing=0 
 | bgcolor=#FFFFF0 colspan=5 align=center | '''Neuter''' 
 |- 
@@ -220,7 +220,7 @@ The translations below need to be checked by native speakers and inserted into t
 | [[fatets]] 
 | [[fats]] 
 | [[fatens]] 
-|} 
+|}
 
 ====See also====
 *[[ligga någon i fatet]]
