/* Adjective */ <pink-collar#42310>

--- a/wiki/pink-collar.wikitext
+++ b/wiki/pink-collar.wikitext
@@ -1,6 +1,6 @@
 ==Adjective==
 
-#Of, relating to, or designated of work which is traditionally done by women; usually used in disparagement.
+#Of, relating to, or designated of secondary labor, which is traditionally done by women; usually used in disparagement.
 #Of or relating to predominately female business or college.
 
 See:
