--- a/wiki/pink-collar.wikitext
+++ b/wiki/pink-collar.wikitext
@@ -1,4 +1,6 @@
-==Adjective==
+==English==
+===Adjective===
+'''pink-collar'''
 
 #Of, relating to, or designated of secondary labor, which is traditionally done by women; usually used in disparagement.
 #Of or relating to predominately female business or college.
