--- a/wiki/white-collar.wikitext
+++ b/wiki/white-collar.wikitext
@@ -6,7 +6,7 @@ From the color of dress shirts worn by professional and clerical workers, as opp
 ===Adjective===
 '''white-collar'''
 
-#Engaged or trained in or designated of working in an office, as opposed to factory, industrial, or other essentially manual work.  Professional or clerical class.
+#Engaged or trained in or designated of office labor, as opposed to factory, industrial, or other essentially manual labor.  Professional or clerical class.
 #: ''White-collar workers represent an augmenting segment of society.''
 #Of or relating to persons who work in an office, as opposed to [[blue-collar]].  
 #Pertaining to the culture of white-collar workers.
