--- a/wiki/pink-collar.wikitext
+++ b/wiki/pink-collar.wikitext
@@ -1,8 +1,12 @@
 ==English==
 ===Adjective===
+
+====Etymology====
+From the fact that women in the 1950s usually wore bright shirts and that pink was then a popular color.
+====Meaning====
 '''pink-collar'''
 
-#Of, relating to, or designated of secondary labor market work, which is traditionally done by women; usually used in disparagement.
+#Of, relating to, or designated of secondary labor market work, traditionally or most likely done by women; usually used in disparagement.
 #Of or relating to predominately female business or college.
 
 See:
