/* Verb */  neologism <stub#45900>

--- a/wiki/stub.wikitext
+++ b/wiki/stub.wikitext
@@ -12,6 +12,7 @@
 ===Verb===
 # To remove most of a tree, bush, etc. by cutting it close to the ground.
 # '''a.''' To remove a plant by pulling it out by the roots.  '''b.''' To clear land through such pulling out by the roots.
+# ''neologism'' To add a stub template to a Wikipedia article (noun-3).
 
 ====Translations====
 * Dutch: [[wieden]] (2)
