--- a/wiki/stub.wikitext
+++ b/wiki/stub.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 # Something cut short, blunted, or stunted:  '''a.''' A short remaining piece of a trunk or stem of a tree, bush, etc. created as a result of cutting, wind damage, etc.  '''b.''' A shortened or blunted item made that way as a result of a part being broken off or being worn down from intensive use.  Often used in reference to writing instruments, such as ''pencil stub'' or ''a stubby quill pen with a short, blunt writing point''.
 # A piece of certain paper items, designed to be torn off and kept for record or identification purposes:  ''check stub'', ''ticket stub'', ''payment stub''.
-# A placeholder article on [[Wikipedia]] or any other [[Wikimedia]] Project, which provides generally rudimentary information about a topic slated for further expansion. See [[W:Stub]]<!-- should probably come last :) -->
+# A placeholder article on [[Wikipedia]] or any other [[Wikimedia]] project, which provides generally rudimentary information about a topic slated for further expansion. <!-- should probably come last :) -->
 
 ====Translations====
 * Dutch: [[stompje]] (1), [[beginnetje]] (3)
@@ -12,7 +12,7 @@
 ===Verb===
 # To remove most of a tree, bush, etc. by cutting it close to the ground.
 # '''a.''' To remove a plant by pulling it out by the roots.  '''b.''' To clear land through such pulling out by the roots.
-# ''neologism'' To add a stub [[Wikipedia:Template messages|template]] to a Wikipedia article (noun-3).
+# (''neologism'') To add a stub [[Wikipedia:Template messages|template]] to a Wikipedia article (noun-3).
 
 ====Translations====
 * Dutch: [[wieden]] (2)
