Added homographs <dunch#27575>

--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -1,5 +1,24 @@
 == English ==
-=== Noun ===
+=== Etymology 1 ===
+Unknown. Said have originated in British golfing slang by golfing magazines.
+
+{{etystub}}
+==== References ====
+* [http://www.worldgolf.com/wglibrary/reference/dictionary/dpage.html Golfing dictionary], accessed on 2005-06-01
+==== Noun ====
+'''dunch'''
+# (''Golf'') a fat hit from a claggy lie
+
+=== Etymology 2 ===
+{{etystub}}
+==== Proper noun ====
+'''Dunch'''
+# a [[family name]]
+
+=== Etymology 3 ===
+[[Category:English derivations]]
+A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
+==== Noun ====
 [[Category:English nouns]]
 '''dunch''' 
 # a small meal between lunch and dinner in the late afternoon or early evening (about 3-5 p.m.), usually including tea or coffee with cookies, sometimes fruits, a salad or a light sandwich.
@@ -7,17 +26,11 @@
 #:*"For tomorrow, I have already scheduled lunch and dinner with my colleagues. Let's have a '''dunch''' together."
 #:'''usage note'''
 #:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a sma ll meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
-
-==== Etymology ====
-[[Category:English derivations]]
-A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
-
-==== See also ====
-* [[food]]
-
-==== Translations ====
+===== Translations =====
 *[[Breton]]: [[adverenn]] ''f''
 *[[Interlingua]]: [[merenda]]
 *[[Persian]]: [[عصرانه]] (asraneh)
 *[[Portuguese]]: [[merenda]] ''f''
 *[[Slovak]]: [[olovrant]] ''m''
+==== See also ====
+* [[food]]
