/* English */ Another.  There is a possibility that this is the same as the golfing term. <dunch#27575>

--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -1,5 +1,15 @@
 == English ==
 === Etymology 1 ===
+{{etystub}}
+==== References ====
+* [http://www.indigogroup.co.uk/durhamdialect/hetton1896.htm List Geordie], accessed on 2005-06-01, which in turn cites
+** F.M.T.Palgrave: ''A List of words and phrases in everyday use by the natives of Hetton-le-Hole in the County of Durham'' (English Dialect Society, volume 74, 1896)
+
+==== Transitive verb ====
+[[Category:English transitive verbs]]
+{{en-infl-reg-sibilant|dunch||}}
+# (''United Kingdom English, primarily Geordie and Scottish English'') jog, hit, punch
+=== Etymology 2 ===
 Unknown. Said have originated in British golfing slang by golfing magazines.
 
 {{etystub}}
@@ -9,13 +19,13 @@ Unknown. Said have originated in British golfing slang by golfing magazines.
 '''dunch'''
 # (''Golf'') a fat hit from a claggy lie
 
-=== Etymology 2 ===
+=== Etymology 3 ===
 {{etystub}}
 ==== Proper noun ====
 '''Dunch'''
 # a [[family name]]
 
-=== Etymology 3 ===
+=== Etymology 4 ===
 [[Category:English derivations]]
 A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
 ==== Noun ====
