--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -1,33 +1,24 @@
 == English ==
-=== Etymology 1 ===
-{{etystub}}
-==== References ====
-* [http://www.indigogroup.co.uk/durhamdialect/hetton1896.htm List Geordie], accessed on 2005-06-01, which in turn cites
-** F.M.T.Palgrave: ''A List of words and phrases in everyday use by the natives of Hetton-le-Hole in the County of Durham'' (English Dialect Society, volume 74, 1896)
-
 ==== Transitive verb ====
 [[Category:English transitive verbs]]
 {{en-infl-reg-sibilant|dunch||}}
 # (''United Kingdom English, primarily Geordie and Scottish English'') jog, hit, punch
-=== Etymology 2 ===
+
+===== Etymology =====
 Unknown. Said have originated in British golfing slang by golfing magazines.
 
-{{etystub}}
-==== References ====
-* [http://www.worldgolf.com/wglibrary/reference/dictionary/dpage.html Golfing dictionary], accessed on 2005-06-01
 ==== Noun ====
 '''dunch'''
 # (''Golf'') a fat hit from a claggy lie
 
-=== Etymology 3 ===
-{{etystub}}
 ==== Proper noun ====
 '''Dunch'''
 # a [[family name]]
 
-=== Etymology 4 ===
+==== Etymology ====
 [[Category:English derivations]]
 A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
+
 ==== Noun ====
 [[Category:English nouns]]
 '''dunch''' 
@@ -35,12 +26,19 @@ A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coine
 #:'''examples'''
 #:*"For tomorrow, I have already scheduled lunch and dinner with my colleagues. Let's have a '''dunch''' together."
 #:'''usage note'''
-#:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a sma ll meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
+#:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a small meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
+
 ===== Translations =====
 *[[Breton]]: [[adverenn]] ''f''
 *[[Interlingua]]: [[merenda]]
 *[[Persian]]: [[عصرانه]] (asraneh)
 *[[Portuguese]]: [[merenda]] ''f''
 *[[Slovak]]: [[olovrant]] ''m''
+
+==== References ====
+* [http://www.worldgolf.com/wglibrary/reference/dictionary/dpage.html Golfing dictionary], accessed on 2005-06-01
+* [http://www.indigogroup.co.uk/durhamdialect/hetton1896.htm List Geordie], accessed on 2005-06-01, which in turn cites
+** F.M.T.Palgrave: ''A List of words and phrases in everyday use by the natives of Hetton-le-Hole in the County of Durham'' (English Dialect Society, volume 74, 1896)
+
 ==== See also ====
 * [[food]]
