--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -1,23 +1,11 @@
 == English ==
-==== Transitive verb ====
+=== Transitive verb ===
 [[Category:English transitive verbs]]
 {{en-infl-reg-sibilant|dunch||}}
 # (''United Kingdom English, primarily Geordie and Scottish English'') jog, hit, punch
 
-===== Etymology =====
-Unknown. Said have originated in British golfing slang by golfing magazines.
-
-==== Noun ====
-'''dunch'''
-# (''Golf'') a fat hit from a claggy lie
-
-==== Proper noun ====
-'''Dunch'''
-# a [[family name]]
-
 ==== Etymology ====
-[[Category:English derivations]]
-A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
+Unknown. Said have originated in British golfing slang by golfing magazines.
 
 ==== Noun ====
 [[Category:English nouns]]
@@ -27,13 +15,26 @@ A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coine
 #:*"For tomorrow, I have already scheduled lunch and dinner with my colleagues. Let's have a '''dunch''' together."
 #:'''usage note'''
 #:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a small meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
+# (''golf'') a fat hit from a claggy lie
 
-===== Translations =====
+===== Etymology =====
+[[Category:English derivations]]
+A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
+
+==== Proper noun ====
+'''Dunch'''
+# a [[family name]]
+
+==== Translations ====
+'''a small meal between lunch and dinner in the late afternoon or early evening'''
+{{top}}
 *[[Breton]]: [[adverenn]] ''f''
 *[[Interlingua]]: [[merenda]]
 *[[Persian]]: [[عصرانه]] (asraneh)
 *[[Portuguese]]: [[merenda]] ''f''
+{{mid}}
 *[[Slovak]]: [[olovrant]] ''m''
+{{bottom}}
 
 ==== References ====
 * [http://www.worldgolf.com/wglibrary/reference/dictionary/dpage.html Golfing dictionary], accessed on 2005-06-01
