--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -7,7 +7,7 @@
 ==== Etymology ====
 Unknown. Said have originated in British golfing slang by golfing magazines.
 
-==== Noun ====
+=== Noun ===
 [[Category:English nouns]]
 '''dunch''' 
 # a small meal between lunch and dinner in the late afternoon or early evening (about 3-5 p.m.), usually including tea or coffee with cookies, sometimes fruits, a salad or a light sandwich.
@@ -17,15 +17,15 @@ Unknown. Said have originated in British golfing slang by golfing magazines.
 #:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a small meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
 # (''golf'') a fat hit from a claggy lie
 
-===== Etymology =====
+==== Etymology ====
 [[Category:English derivations]]
-A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
+''(1)'' A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
 
-==== Proper noun ====
+=== Proper noun ===
 '''Dunch'''
 # a [[family name]]
 
-==== Translations ====
+=== Translations ===
 '''a small meal between lunch and dinner in the late afternoon or early evening'''
 {{top}}
 *[[Breton]]: [[adverenn]] ''f''
@@ -36,10 +36,10 @@ A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coine
 *[[Slovak]]: [[olovrant]] ''m''
 {{bottom}}
 
-==== References ====
+=== References ===
 * [http://www.worldgolf.com/wglibrary/reference/dictionary/dpage.html Golfing dictionary], accessed on 2005-06-01
 * [http://www.indigogroup.co.uk/durhamdialect/hetton1896.htm List Geordie], accessed on 2005-06-01, which in turn cites
 ** F.M.T.Palgrave: ''A List of words and phrases in everyday use by the natives of Hetton-le-Hole in the County of Durham'' (English Dialect Society, volume 74, 1896)
 
-==== See also ====
+=== See also ===
 * [[food]]
