--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -4,9 +4,6 @@
 {{en-infl-reg-sibilant|dunch||}}
 # (''United Kingdom English, primarily Geordie and Scottish English'') jog, hit, punch
 
-==== Etymology ====
-Unknown. Said have originated in British golfing slang by golfing magazines.
-
 === Noun ===
 [[Category:English nouns]]
 '''dunch''' 
@@ -19,7 +16,8 @@ Unknown. Said have originated in British golfing slang by golfing magazines.
 
 ==== Etymology ====
 [[Category:English derivations]]
-''(1)'' A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
+#A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
+#Unknown. Said have originated in British golfing slang by golfing magazines.
 
 === Proper noun ===
 '''Dunch'''
