--- a/wiki/azimuth.wikitext
+++ b/wiki/azimuth.wikitext
@@ -3,3 +3,7 @@
 ===Noun===
 #An [[arc]] of the [[horizon]] intercepted between the [[meridian]] of the place and a [[vertical]] circle passing through the center of any object; as, the azimuth of a star; the azimuth or bearing of a line surveying.
 #The quadrant of an azimuth circle.
+
+==== See also ====
+
+* [[Nadir]]
