how's that? <dunch#27575>

--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -16,8 +16,13 @@
 
 ==== Etymology ====
 [[Category:English derivations]]
-#A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
-#Unknown. Said have originated in British golfing slang by golfing magazines.
+A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
+
+=== Noun 2 ===
+# (''golf'') a fat hit from a claggy lie
+
+==== Etymology ====
+Unknown. Said have originated in British golfing slang by golfing magazines.
 
 === Proper noun ===
 '''Dunch'''
