Mixing the etymologies is misleading.  You made it seem like Mikhail Epstein coined a golf term. <dunch#27575>

--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -1,35 +1,40 @@
 == English ==
-=== Transitive verb ===
+=== Etymology 1 ===
+{{etystub}}
+==== Transitive verb ====
 [[Category:English transitive verbs]]
 {{en-infl-reg-sibilant|dunch||}}
 # (''United Kingdom English, primarily Geordie and Scottish English'') jog, hit, punch
+==== References ====
+* [http://www.indigogroup.co.uk/durhamdialect/hetton1896.htm List Geordie], accessed on 2005-06-01, which in turn cites
+** F.M.T.Palgrave: ''A List of words and phrases in everyday use by the natives of Hetton-le-Hole in the County of Durham'' (English Dialect Society, volume 74, 1896)
 
-=== Noun ===
+=== Etymology 2 ===
+Said to have originated in British golfing slang by golfing magazines.
+==== Noun ====
+'''dunch'''
+# (''Golf'') a fat hit from a claggy lie
+==== References ====
+* [http://www.worldgolf.com/wglibrary/reference/dictionary/dpage.html Golfing dictionary], accessed on 2005-06-01
+
+=== Etymology 3 ===
+{{etystub}}
+==== Proper noun ====
+'''Dunch'''
+# a [[family name]]
+
+=== Etymology 4 ===
+[[Category:English derivations]]
+A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
+==== Noun ====
 [[Category:English nouns]]
 '''dunch''' 
 # a small meal between lunch and dinner in the late afternoon or early evening (about 3-5 p.m.), usually including tea or coffee with cookies, sometimes fruits, a salad or a light sandwich.
 #:'''examples'''
 #:*"For tomorrow, I have already scheduled lunch and dinner with my colleagues. Let's have a '''dunch''' together."
 #:'''usage note'''
-#:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a small meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
-# (''golf'') a fat hit from a claggy lie
-
-==== Etymology ====
-[[Category:English derivations]]
-A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coined by [[User:Mikhail Epstein|Mikhail Epstein]].
-
-=== Noun 2 ===
-# (''golf'') a fat hit from a claggy lie
-
-==== Etymology ====
-Unknown. Said have originated in British golfing slang by golfing magazines.
-
-=== Proper noun ===
-'''Dunch'''
-# a [[family name]]
-
-=== Translations ===
-'''a small meal between lunch and dinner in the late afternoon or early evening'''
+#:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a sma ll meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
+===== Translations =====
 {{top}}
 *[[Breton]]: [[adverenn]] ''f''
 *[[Interlingua]]: [[merenda]]
@@ -38,11 +43,5 @@ Unknown. Said have originated in British golfing slang by golfing magazines.
 {{mid}}
 *[[Slovak]]: [[olovrant]] ''m''
 {{bottom}}
-
-=== References ===
-* [http://www.worldgolf.com/wglibrary/reference/dictionary/dpage.html Golfing dictionary], accessed on 2005-06-01
-* [http://www.indigogroup.co.uk/durhamdialect/hetton1896.htm List Geordie], accessed on 2005-06-01, which in turn cites
-** F.M.T.Palgrave: ''A List of words and phrases in everyday use by the natives of Hetton-le-Hole in the County of Durham'' (English Dialect Society, volume 74, 1896)
-
-=== See also ===
+==== See also ====
 * [[food]]
