--- a/wiki/dunch.wikitext
+++ b/wiki/dunch.wikitext
@@ -1,21 +1,17 @@
 == English ==
 === Etymology 1 ===
 {{etystub}}
+
 ==== Transitive verb ====
 [[Category:English transitive verbs]]
 {{en-infl-reg-sibilant|dunch||}}
 # (''United Kingdom English, primarily Geordie and Scottish English'') jog, hit, punch
-==== References ====
-* [http://www.indigogroup.co.uk/durhamdialect/hetton1896.htm List Geordie], accessed on 2005-06-01, which in turn cites
-** F.M.T.Palgrave: ''A List of words and phrases in everyday use by the natives of Hetton-le-Hole in the County of Durham'' (English Dialect Society, volume 74, 1896)
 
 === Etymology 2 ===
 Said to have originated in British golfing slang by golfing magazines.
 ==== Noun ====
 '''dunch'''
 # (''Golf'') a fat hit from a claggy lie
-==== References ====
-* [http://www.worldgolf.com/wglibrary/reference/dictionary/dpage.html Golfing dictionary], accessed on 2005-06-01
 
 === Etymology 3 ===
 {{etystub}}
@@ -33,7 +29,8 @@ A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coine
 #:'''examples'''
 #:*"For tomorrow, I have already scheduled lunch and dinner with my colleagues. Let's have a '''dunch''' together."
 #:'''usage note'''
-#:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a sma ll meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
+#:*This is a more appropriate word for an intermediate meal than the once suggested "linner". Dunch, a small meal, is more similar to lunch than to dinner, and accordingly the word is more brief (one syllable). Also, the word "dunch" follows the pattern of naming another intermediate (or combined) meal - "brunch."
+
 ===== Translations =====
 {{top}}
 *[[Breton]]: [[adverenn]] ''f''
@@ -43,5 +40,11 @@ A [[portmanteau word]] combining [[lunch]] and [[dinner]] (cf. [[brunch]]) coine
 {{mid}}
 *[[Slovak]]: [[olovrant]] ''m''
 {{bottom}}
+
 ==== See also ====
 * [[food]]
+
+=== References ===
+* [http://www.indigogroup.co.uk/durhamdialect/hetton1896.htm List Geordie], accessed on 2005-06-01, which in turn cites
+** F.M.T.Palgrave: ''A List of words and phrases in everyday use by the natives of Hetton-le-Hole in the County of Durham'' (English Dialect Society, volume 74, 1896)
+* [http://www.worldgolf.com/wglibrary/reference/dictionary/dpage.html Golfing dictionary], accessed on 2005-06-01
