--- a/wiki/Terrence.wikitext
+++ b/wiki/Terrence.wikitext
@@ -1,5 +1,4 @@
-
    Terrence Charles Miller
 
  
- Not just any name. But mine. Terrence, a male gendered name rooted in Latin to mean Tender,Good, Gracious. Charles which is
+ Not just any name. But mine. Terrence, a male gendered name rooted in Latin to mean Tender,Good, Gracious. Charles which is also male gendered is Latin,German and French meaning Manly, Full grown.  My surname Miller goes back to
