--- a/wiki/intermittent.wikitext
+++ b/wiki/intermittent.wikitext
@@ -1,3 +1,6 @@
+===Etymology===
+From Latin '''[[intermittens]]''', ''sending between'', from prefix '''[[inter-]]''', ''among'' or ''between'', plus present participle '''[[mittens]]''', ''sending'', from '''[[mittere]]''', ''send''
+
 ==English==
 
 ===Adjective===
