+see also <intermittent#82455>

--- a/wiki/intermittent.wikitext
+++ b/wiki/intermittent.wikitext
@@ -10,4 +10,6 @@ From Latin '''[[intermittens]]''', ''sending between'', from prefix '''[[inter-]
 #:''The day was cloudy with '''intermittent''' rain.''
 
 ===See also===
+*[[inter]]
+*[[inter-]]
 *[[intermittently]]
