--- a/wiki/Terrence.wikitext
+++ b/wiki/Terrence.wikitext
@@ -1,4 +1,7 @@
    Terrence Charles Miller
 
  
- Not just any name. But mine. Terrence, a male gendered name rooted in Latin to mean Tender,Good, Gracious. Charles which is also male gendered is Latin,German and French meaning Manly, Full grown.  My surname Miller goes back to
+ Not just any name. But mine. Terrence, a male gendered name rooted in Latin to mean Tender,Good, Gracious. Charles which is also male gendered is Latin,German and French meaning Manly, Full grown.  
+  My surname Miller has it's Origin: English. The definitions are as follows: 
+Definition: 1- Usually an occupational surname referring to a person who owned or worked in a grain mill. 2- Could also possibly be derived in some instances from the Gaelic words "meillear," having large lips; "malair," merchant; or "maillor," a man wearing armor or a soldier. 
+Alternate Surname Spellings: MILLAR, MILLS
