--- a/wiki/impost.wikitext
+++ b/wiki/impost.wikitext
@@ -1,7 +1,13 @@
-{{Engnoun}}
+==English==
+===Etymology 1===
+through French ''[[impôt]]'', from Latin ''[[impositus]]''
+====Noun====
 '''impost'''
 # a [[tax]], [[tariff]] or [[duty]] etc. that is [[imposed]]
 # the [[weight]] that must be [[carried]] by a [[horse]] in a [[race]].
-# the top part of a [[column]] or [[pillar]] that [[support]]s an [[arch]]
 ====See Also====
-*[[imposter]]
+*[[imposter]], [[imposae]]
+
+===Etymology 2===
+through Italian ''[[imposta]]'' from Latin ''[[imposta]]'' 
+# the top part of a [[column]] or [[pillar]] that [[support]]s an [[arch]]
