--- a/wiki/impost.wikitext
+++ b/wiki/impost.wikitext
@@ -6,8 +6,9 @@ through French ''[[impôt]]'', from Latin ''[[impositus]]''
 # a [[tax]], [[tariff]] or [[duty]] etc. that is [[imposed]]
 # the [[weight]] that must be [[carried]] by a [[horse]] in a [[race]].
 ====See Also====
-*[[imposter]], [[imposae]]
+*[[imposter]], [[impostor]], [[impose]]
 
 ===Etymology 2===
 through Italian ''[[imposta]]'' from Latin ''[[imposta]]'' 
+===Noun===
 # the top part of a [[column]] or [[pillar]] that [[support]]s an [[arch]]
