--- a/wiki/impost.wikitext
+++ b/wiki/impost.wikitext
@@ -4,7 +4,8 @@ through French ''[[impôt]]'', from Latin ''[[impositus]]''
 ====Noun====
 '''impost'''
 # a [[tax]], [[tariff]] or [[duty]] etc. that is [[imposed]]
-# the [[weight]] that must be [[carried]] by a [[horse]] in a [[race]].
+# the [[weight]] that must be [[carried]] by a [[horse]] in a [[race]], the handicap.
+
 ====See Also====
 *[[imposter]], [[impostor]], [[impose]]
 
