--- a/wiki/tinsel.wikitext
+++ b/wiki/tinsel.wikitext
@@ -1,14 +1,28 @@
 ==English==
+===Etymology===
+French ''[[étincelle]]'' a spark, Old French ''[[estincelle]]'', Latin ''[[scintilla]]''. Compare [[scintillate]], [[stencil]]
 ===Noun===
 '''tinsel''' (''[[uncountable]]'')
-
-#Very thin strips of a [[glitter]]ing, [[mettalic]] material used as a [[decoration]]; especially in [[Britain]] where, traditionally, at [[Christmas]] time it is [[drape]]d over [[streamer]]s, [[paper chain]]s and the branches of [[Christmas tree]]s.
+#A shining material used for ornamental purposes; especially, a very thin, gauzelike cloth with much gold or silver woven into it; also, very thin metal overlaid with a thin coating of gold or silver, brass foil, or the like.
+#:Who can discern the tinsel from the gold? - [[John Dryden]]
+#Very thin strips of a [[glitter]]ing, [[mettalic]] material used as a [[decoration]]; traditionally, at [[Christmas]] time it is [[drape]]d over [[streamer]]s, [[paper chain]]s and the branches of [[Christmas tree]]s.
+#Something shining and [[gaudy]]; something superficially shining and showy, or having a false luster, and more gay than valuable.
+#:O happy peasant! O unhappy bard! His the mere tinsel, hers the rich reward. - [[William Cowper]]
+===Adjective===
+#Showy to excess; gaudy; specious; superficial. 
+#:Tinsel trappings. - [[John Milton]]
 ===Transitive verb===
-'''tinsel'''
-#To decorate with tinsel.
+'''tinsel'''<br>
+Imperfect and past participle: Tinseled ''or'' Tinselled <br>
+Present participle: Tinseling ''or'' Tinselling
+#To adorn with tinsel; to deck out with cheap but showy ornaments; to make gaudy.
+#:She, tinseled o'er in robes of varying hues. - [[Alexander Pope]]
 #(''metaphorical'') To give something a false [[sparkle]].
-===Related terms===
+===Derived terms===
 *[[Tinseltown]]
 ===See also===
 *[[trimmings]]
 *[[trim up]]
+
+===Reference===
+Webster 1913
