--- a/wiki/Terrence.wikitext
+++ b/wiki/Terrence.wikitext
@@ -4,4 +4,5 @@
  Not just any name. But mine. Terrence, a male gendered name rooted in Latin to mean Tender,Good, Gracious. Charles which is also male gendered is Latin,German and French meaning Manly, Full grown.  
   My surname Miller has it's Origin: English. The definitions are as follows: 
 Definition: 1- Usually an occupational surname referring to a person who owned or worked in a grain mill. 2- Could also possibly be derived in some instances from the Gaelic words "meillear," having large lips; "malair," merchant; or "maillor," a man wearing armor or a soldier. 
-Alternate Surname Spellings: MILLAR, MILLS
+Alternate Surname Spellings: MILLAR, MILLS. There were 1,168,400 Millers online. 
+  I'm a mixed breed. My Mother is 1/4 Irish, German, Scots and Cherokee. The Indian Tribe is the only thing that I could really track down. Her Grandfather was born on the Oklahoma Osage Tribe Reservation in 1902. My father is African-American. Mulatto is the term they used
