--- a/wiki/pussy.wikitext
+++ b/wiki/pussy.wikitext
@@ -4,7 +4,7 @@
 
 ===Noun===
 '''pussy''' (''plural'' '''pussies''')
-
+#(''colloquial, also'' '''pussy-cat''') An affectionate term for a [[cat]].
 #(''taboo slang'') The female [[genitalia]].
 #A [[coward]].
 
