spelling differs, but UK and US usages essentially the same <theatre#1798123>

--- a/wiki/theatre.wikitext
+++ b/wiki/theatre.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Alternative spellings===
 * [[theater]]
-====Usage note====
+====Spelling note====
 The spelling "'''theatre'''" is the main spelling in Commonwealth English, with "[[theater]]" being rare.  In United States English, [[Theatre]] mainly only occurs in proper nouns, albeit not universally even then.
 =====References=====
 * [http://www.newpaltz.edu./styleguide/editorial/t.html SUNY new Paltz Editorial Style Guide], accessed on 2005-05-08
@@ -9,16 +9,14 @@ The spelling "'''theatre'''" is the main spelling in Commonwealth English, with 
 * [http://www.utexas.edu./visualguidelines/tricky.html University of Texas at Austin Writer's Style Guide], accessed on 2005-05-08
 * [http://juilliard.edu./libraryarchives/internet.html The Juilliard School - Internet Links], accessed on 2005-05-08
 ===Etymology===
-From {{Gr.}} [[]] (''théatron'') ''a viewing'' via {{L.}} [[theatrum]], and {{OF.}} and {{ME.}} [[theatre]]
-
-{{etystub}}
+From Greek (''théatron'') ''a viewing'' via Latin ''[[theatrum]]'', Old French and Middle English [[theatre]]
 
 ===Noun===
-[[Category:English nouns]]
 '''theatre'''  (''plural:'' [[theatres]])
-# (''Commonwealth English''): A live [[performance]] or the production thereof.
-# (''Commonwealth English''): A place or [[building]], consisting of a [[stage]] and seating, in which an [[audience]] gathers to watch [[play]]s, [[movie]]s, speechs or other public ceremonies.
-# A region and time of major historical significance, usually regarding warfare.
+#a live [[performance]] or the production thereof.
+#a place or [[building]], consisting of a [[stage]] and seating, in which an [[audience]] gathers to watch [[play]]s, [[movie]]s, speechs or other public ceremonies.
+#: "The '''theatre''' is not merely the meeting place of all the arts, it is also the return of art to life." - ([[w:Oscar Wilde]])
+#a region and time of major historical significance, usually regarding warfare.
 #: ''His grandfather was in the Pacific '''theatre''' during the war.''
 ====Translations====
 {| border=0 width=100%
@@ -26,7 +24,6 @@ From {{Gr.}} [[]] (''théatron'') ''a viewing'' via {{L.}} [[theatrum]], and {{O
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--left column-->
-*Chinese: [[戏院]], [[剧场]]
 *Finnish: [[teatteri]]
 *French: [[théâtre]] ''m''
 |}
@@ -38,9 +35,5 @@ From {{Gr.}} [[]] (''théatron'') ''a viewing'' via {{L.}} [[theatrum]], and {{O
 *Japanese: [[劇場]]
 |}
 |}
-
-====Quotations====
-
-# "The '''theatre''' is not merely the meeting place of all the arts, it is also the return of art to life." ([[w:Oscar Wilde]])
 
 [[Category:Arts]]
