restoring mysteriously disappearing Chinese & Japanese <theatre#1798123>

--- a/wiki/theatre.wikitext
+++ b/wiki/theatre.wikitext
@@ -24,6 +24,7 @@ From Greek (''théatron'') ''a viewing'' via Latin ''[[theatrum]]'', Old French 
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--left column-->
+*Chinese: [[戏院]], [[剧场]]
 *Finnish: [[teatteri]]
 *French: [[théâtre]] ''m''
 |}
@@ -32,6 +33,7 @@ From Greek (''théatron'') ''a viewing'' via Latin ''[[theatrum]]'', Old French 
 {|
 <!--right column-->
 *Italian: [[teatro]]
+*Japanese: [[劇場]]
 |}
 |}
 
