only spellings differ not usages <theater#94045>

--- a/wiki/theater.wikitext
+++ b/wiki/theater.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Alternative spellings===
 *[[theatre]]
-====Usage note====
+====Spelling note====
 The spelling "'''theater'''" is rare in Commonwealth English.  In United States English, both spellings are in use:  As a common noun '''theater''' is preferred, but [[Theatre]] occurs in proper nouns, albeit not universally.
 =====References=====
 * [http://www.newpaltz.edu./styleguide/editorial/t.html SUNY new Paltz Editorial Style Guide], accessed on 2005-05-08
@@ -11,10 +11,9 @@ The spelling "'''theater'''" is rare in Commonwealth English.  In United States 
 ===Etymology===
 Re-spelling of [[theatre]] coined by [[w:Noah Webster|Noah Webster]].
 ===Noun===
-[[Category:English nouns]]
 '''theater'''  (''plural:'' [[theaters]])
-# (''United States English''): A place or building, consisting of a stage and seating, in which an audience gathers to watch plays, movies, speechs or other public ceremonies.
-# (''United States English, military''): A region regarding large-scale activities or exercises.
+#a place or building, consisting of a stage and seating, in which an audience gathers to watch plays, movies, speechs or other public ceremonies.
+#''(military):'' a region regarding large-scale activities or exercises.
 
 ===Translations===
 * Finnish: [[teatteri]]
