robot  Adding:de <kaiser#91564>

--- a/wiki/kaiser.wikitext
+++ b/wiki/kaiser.wikitext
@@ -5,3 +5,5 @@ From {{G.}}, ultimately from {{L.}} "Cæsar".
 [[Category:English nouns]]
 '''kaiser'''
 # An emperor in a German-speaking country, including those of the Holy Roman Empire, the German Empire and the Austrian Empire.
+
+[[de:Kaiser]]
