plenty of red here... rewrite, etym, pro, fmt <poignant#99264>

--- a/wiki/poignant.wikitext
+++ b/wiki/poignant.wikitext
@@ -1,6 +1,25 @@
-==Adjective==
-# [[Painful]]; [[distressing]].
-# ''there are others''
+== English ==
+=== Etymology ===
+From the Old French ''[[poignant]]'' from ''[[poindre]]'' "to prick" from the Latin ''[[pungere]]'' "to prick"
 
-==External links==
-* [http://www.answers.com/poignant&r=67 About.com on Poignant]
+=== Pronunciations ===
+*{{SAMPA}} /"pOIn.jEnt/
+*{{IPAlink}} {{IPA|/'pɔɪn.jɛnt/}}
+
+===Adjective===
+'''poignant'''
+#
+#* [[inducing]] [[physical]] [[pain]]
+#* [[distressing]]
+#* emotionally [[moving]]
+#*: ''Flipping through his high school yearbook evoked many a [[poignant]] memory of yesteryear.''
+# [[incisive]]; [[penetrating]]
+#: ''His comments were [[poignant]] and witty.''
+#
+#* [[neat]]; [[eloquent]]
+#* [[applicable]]; [[relevant]]
+#*: ''A [[poignant]] reply will garner more credance than hours of blown smoke.''
+# [[pleasantly]] [[intense]]
+#
+#* (''archaic'') [[piquant]]
+#* (''archaic'') [[pungently]] [[aromatic]]
