robot  Adding:fi <Katze#91740>

--- a/wiki/Katze.wikitext
+++ b/wiki/Katze.wikitext
@@ -3,11 +3,12 @@
 :'''Katze''' ''f'', '''Katzen''' ''pl''
 #[[cat]]
 
+[[Category:Cat]]
+
 [[de:Katze]]
 [[fr:Katze]]
-[[hu:Katze]]
 [[la:Katze]]
+[[hu:Katze]]
 [[pl:Katze]]
+[[fi:Katze]]
 [[sv:Katze]]
-
-[[Category:Cat]]
