+Rndc: The American Heritage® Dictionary of the English Language, Fourth Edition <verisimilitude#35550>

--- a/wiki/verisimilitude.wikitext
+++ b/wiki/verisimilitude.wikitext
@@ -1,6 +1,1 @@
-===Pronunciation===
-vεrɪsɪmɪlɪtjud
-
-=== Noun ===
-# The appearance of being true or real.
-# Something that appears true or real.
+{{Rndc}}
