robot  Adding:sv <a priori#66798>

--- a/wiki/a_priori.wikitext
+++ b/wiki/a_priori.wikitext
@@ -28,3 +28,4 @@ First attested [[w:1710|1710]], from [[Latin]] literally ''from the former'', fr
 
 [[et:A priori]]
 [[fr:a priori]]
+[[sv:a priori]]
