--- a/wiki/a_cappella.wikitext
+++ b/wiki/a_cappella.wikitext
@@ -16,3 +16,5 @@ From Italian phrase "'''a cappella'''" meaning "''in the style of the [[Sistine 
 
 * {{de}}: a cappella
 * Italian: a cappella
+
+[[sv:a capella]]
