/* Related terms */ <e-quaintance#67227>

--- a/wiki/e-quaintance.wikitext
+++ b/wiki/e-quaintance.wikitext
@@ -17,3 +17,4 @@ Searching for info on that carb system was my ticket to learn how to surf the ne
 
 ===Related terms===
 *[[e-quaint]]
+*[[e-quainted]]
