--- a/wiki/e-quaintance.wikitext
+++ b/wiki/e-quaintance.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+==Variations===
+Online Acquaintance, Ecquaintance
+
 ===Etymology===
 From {{E.}}<em><!-- Kludge: template followed by link swallows space--></em> [[acquaintance]], replacing '''ac-''' ([[ad#Latin|ad]]) with [[e-]] ''electronic'', by analogy with [[e-mail]]
 
