--- a/wiki/package.wikitext
+++ b/wiki/package.wikitext
@@ -8,6 +8,7 @@
 #(''euphemism'') The [[male]] [[genitalia]]
 
 ====Translations====
+*Chinese: [[包裹]] (bāo guǒ)
 *Finnish: [[pakkaus]] (1, 2)
 *Swedish: [[paket]] (1, 2) [[paketering]] (3)
 
