--- a/wiki/aspirin.wikitext
+++ b/wiki/aspirin.wikitext
@@ -12,6 +12,7 @@ From the German trademark ''Aspirin''.  The word is still used as a trademark in
 
 ====Translations====
 *Bulgarian: [[аспирин]] ''m'' (1)
+*Chinese: [[阿斯匹灵]] (ā sī pǐ líng)
 *German: [[Aspirin]] ''n'' (1)
 *Romanian: [[aspirină]] ''f'' (1)
 
