--- a/wiki/ab.wikitext
+++ b/wiki/ab.wikitext
@@ -1,16 +1,54 @@
-==English==
-===Abbreviation===
-#[[Alberta]] (Canadian province)
+== English ==
+===Etymology===
+Of [[Syriac]] origin.
 
-===Blood Type===
-#A [[blood type]] that has a both blood antigens.  They can receive blood from type [[A]], [[B]], [[AB]] or type [[O]], but cannot give blood to any other blood type.
+=== Proper noun ===
+'''Ab'''
+
+#The fifth month of the Jewish year according to the ecclesiastical reckoning, the [[eleventh]] by the civil [[computation]], [[coinciding]] nearly with [[August]]. - [[W. Smith]]
+
+=== Noun ===
+'''ab''' (''plural'' '''[[abs]]''')
+
+#(''colloquial'') An [[abdominal]] muscle.
 
 ----
-==Swedish==
-===Noun===
-# Bloodtype AB
-# Abbreviation for [[Aktiebolag]]
 
-[[Category:Abbreviation]]
+== German ==
+=== Preposition ===
+'''ab'''
 
-[[sv:AB]]
+#[[from]]
+#:'''''Ab''' heute verfügbar'' (Available from today on)
+
+=== Prefix ===
+'''ab-'''
+
+#[[from]], [[away from]], down from
+#:''abfahren'' (depart from), ''abbuchen'' (deduct from)
+#:''Der Zug fährt um 10 Uhr '''ab''''' (The train departs at 10 o'clock)
+
+----
+
+==Latin==
+=== Preposition ===
+'''ab''', also '''[[a]]'''
+
+Takes object in [[ablative case]]
+
+# [[of]], [[from]]
+
+----
+
+==[[Volapük]]==
+=== Conjunction ===
+'''ab'''
+
+#[[but]]
+
+[[de:ab]]
+[[gl:Ab]]
+[[la:Ab]]
+[[nl:ab]]
+[[pl:Ab]]
+[[fi:Ab]]
