robot  Adding:pl <key#8534>

--- a/wiki/key.wikitext
+++ b/wiki/key.wikitext
@@ -397,7 +397,9 @@ The translations below need to be checked by native speakers and inserted into t
 
 # [[when]]
 
+[[Category:1000 English basic words]]
+
 [[es:key]]
 [[it:key]]
 [[nl:key]]
-[[Category:1000 English basic words]]
+[[pl:Key]]
