robot  Adding:fi <kettu#42035>

--- a/wiki/kettu.wikitext
+++ b/wiki/kettu.wikitext
@@ -13,3 +13,5 @@ Derived from ''[[kesi]]'' "skin" probably because of the importance of the fox a
 ====Synonyms====
 *[[repo#Finnish|repo]]
 *[[repolainen]]
+
+[[fi:Kettu]]
