--- a/wiki/fugitive.wikitext
+++ b/wiki/fugitive.wikitext
@@ -6,6 +6,7 @@
 #:''John was a fugitive''
 
 ====Translations====
+*Chinese: [[逃亡者]] (táo wáng zhě)
 *Danish: [[flygtning]] ''c''
 *Dutch: [[vluchteling]] ''m'', [[vluchtelinge]] ''f'', [[voortvluchtige]] ''m, f''
 *[[German]]: [[Flüchtling]] ''m''
