--- a/wiki/urine.wikitext
+++ b/wiki/urine.wikitext
@@ -11,7 +11,7 @@
 *[[urination]]
 
 ====Translations====
-*Chinese Characters: [[尿]], [[尿]]
+*Chinese: [[尿]] (niào)
 *Dutch: urine
 *French: urine ''f''
 *German: [[Urin]] ''m''
