--- a/wiki/wedding.wikitext
+++ b/wiki/wedding.wikitext
@@ -20,6 +20,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Chinese: [[婚礼]] (hūn lǐ)
 *Czech: [[svatba]] ''f''
 *Estonian: [[pulm#Estonian|pulm]]
 *Finnish: [[häät]] ''pl''
