--- a/wiki/abandonware.wikitext
+++ b/wiki/abandonware.wikitext
@@ -30,3 +30,5 @@ From [[abandon]] + [[ware]] a contraction of [[software]]
 *[[console emulation]]
 *[[console emulator]]
 *[[fan translation]]
+
+[[sv:abandonware]]
