--- a/wiki/racist.wikitext
+++ b/wiki/racist.wikitext
@@ -2,6 +2,7 @@
 '''racist''' ([[racists]])
 
 ====Translations====
+*Chinese: [[种族歧视者]] (zhǒng zú qí shì zhě)
 *Finnish: [[rasisti]]
 *French: [[rasiste]] ''m'', ''f''
 *Italian: [[razzista]] ''m'', ''f''
@@ -11,6 +12,7 @@
 '''racist''' (more racist, most racist)
 
 ====Translations====
+*Chinese: [[种族歧视]] (zhǒng zú qí shì)
 *Finnish: [[rasistinen]]
 
 ===Related terms===
