robot  Adding:fr,zh <kiwi#4240>

--- a/wiki/kiwi.wikitext
+++ b/wiki/kiwi.wikitext
@@ -121,5 +121,7 @@ From '''[[Maori]]'''.  The word for the fruit finds its roots in the successful 
 
 #kiwi (''bird'')
 
+[[fr:kiwi]]
 [[pt:Kiwi]]
 [[fi:Kiwi]]
+[[zh:Kiwi]]
