adding Webster 1913's definition, and cleaning up the ... original <cockmaster#99268>

--- a/wiki/cockmaster.wikitext
+++ b/wiki/cockmaster.wikitext
@@ -1,1 +1,5 @@
-Noun, someone with good fellatio skills, and/or someone who performs a lot of it.
+==English==
+===Noun===
+'''cockmaster'''
+# One who breeds [[gamecock]]s.  
+# ''(vulgar slang)'' Someone skilled with the penis (either in applying it, or in gratifying it).
