robot  Adding:fr <knife#8410>

--- a/wiki/knife.wikitext
+++ b/wiki/knife.wikitext
@@ -40,7 +40,9 @@
 '''to knife'''
 # to use a knife to [[injure]] or [[kill]] by [[stab]]bing, [[slash]]ing, or otherwise using the sharp edge of the knife as a [[weapon]].
 
-[[it:knife]]
-[[sv:knife]]
 [[Category:English irregular plurals]]
 [[Category:1000 English basic words]]
+
+[[fr:knife]]
+[[it:knife]]
+[[sv:knife]]
