robot  Adding:et <kris#59040>

--- a/wiki/kris.wikitext
+++ b/wiki/kris.wikitext
@@ -13,3 +13,5 @@ From Malay [[kris]].
 #a [[Moro]] [[sword]] with an assymetrical blade
 ===See Also===
 *[[w:kris|Wikipedia article on the Kris]]
+
+[[et:Kris]]
