robot  Adding:et <ky#39104>

--- a/wiki/KY.wikitext
+++ b/wiki/KY.wikitext
@@ -1,6 +1,7 @@
-{{-en-}}
+==Lojban==
+===cmavo===
+'''ky'''
 
-==={{Abbreviation}}===
-#[[Kentucky]], a {{USstate}}
+#letteral for [[k]]
 
-[[pl:KY]]
+[[et:Ky]]
