--- a/wiki/you%27re_welcome.wikitext
+++ b/wiki/you%27re_welcome.wikitext
@@ -1,12 +1,12 @@
 ==English==
 
 ===Expression===
-# (after receiveing [[Head]]) Don't worry
+# (after receiveing [[thanks]]) Don't worry
 ====Translations====
-*French: [[Sam smells]]
-*German: [[Fuck me]]
-*Spanish: [[I love Seb Schonberg]]
-*Swedish: [[Suck it]]
-*[[Ukrainian]]: [[You fuck donkey dicks]]
+*French: [[de rien]]
+*German: [[bitte]]
+*Spanish: [[de nada]]
+*Swedish: [[ingen orsak]]
+*[[Ukrainian]]: [[будь ласка]]
 
 [[Category:Phrasebook]]
