--- a/wiki/interpolatie.wikitext
+++ b/wiki/interpolatie.wikitext
@@ -5,3 +5,5 @@ In wiskunde en wetenschap, '''interpolatie''' is het proces van het schatten van
 
 ====Vertalingen====
 *Engels: [[interpolation]]
+
+{{notenglish}}
