robot  Adding:fr <lac#60520>

--- a/wiki/lac.wikitext
+++ b/wiki/lac.wikitext
@@ -4,6 +4,7 @@
 
 #A [[resinous]] substance produced mainly on the [[banyan]] tree by the female of [[Coccus lacca]], a scale-shaped insect.
 
+[[fr:lac]]
 [[gl:Lac]]
 [[pl:Lac]]
 [[sv:lac]]
