robot  Adding:it <laboratory#96768>

--- a/wiki/laboratory.wikitext
+++ b/wiki/laboratory.wikitext
@@ -8,3 +8,5 @@ Shortened from elaboratory; confer {{OF.}} ''elaboratoire'', {{F.}} ''laboratoir
 '''laboratory'''  (''plural:'' '''[[laboratories]]''')
 # a [[room]], [[building]] or [[institution]] [[equipped]] for [[scientific]] [[research]], [[experimentation]] or [[analysis]]
 # a place where [[chemical]]s, [[drug]]s or [[microbe]]s are [[prepared]] or [[manufactured]]
+
+[[it:laboratory]]
