robot  Modifying:pl <lacuna#60521>

--- a/wiki/lacuna.wikitext
+++ b/wiki/lacuna.wikitext
@@ -6,4 +6,4 @@
 #An absent part, especially in a book or other piece of writing, often referring to an ancient manuscript or similar.  Plural is lacunas or lacunae.
 
 [[de:lacuna]]
-[[pl:Lacunae]]
+[[pl:Lacuna]]
