--- a/wiki/poignant.wikitext
+++ b/wiki/poignant.wikitext
@@ -8,18 +8,11 @@ From the Old French ''[[poignant]]'' from ''[[poindre]]'' "to prick" from the La
 
 ===Adjective===
 '''poignant'''
-#
-#* [[inducing]] [[physical]] [[pain]]
-#* [[distressing]]
-#* emotionally [[moving]]
-#*: ''Flipping through his high school yearbook evoked many a [[poignant]] memory of yesteryear.''
+# [[inducing]] [[physical]] [[pain]]; [[distressing]]; [[emotionally]] [[moving]]
+#:''Flipping through his high school yearbook evoked many a [[poignant]] memory of yesteryear.''
 # [[incisive]]; [[penetrating]]
-#: ''His comments were [[poignant]] and witty.''
-#
-#* [[neat]]; [[eloquent]]
-#* [[applicable]]; [[relevant]]
-#*: ''A [[poignant]] reply will garner more credance than hours of blown smoke.''
+#:''His comments were [[poignant]] and witty.''
+# [[neat]]; [[eloquent]]; [[applicable]]; [[relevant]]
+#:''A [[poignant]] reply will garner more credance than hours of blown smoke.''
 # [[pleasantly]] [[intense]]
-#
-#* (''archaic'') [[piquant]]
-#* (''archaic'') [[pungently]] [[aromatic]]
+#(''archaic'') [[piquant]], [[pungently]] [[aromatic]]
