robot  Adding:fr <land#37192>

--- a/wiki/land.wikitext
+++ b/wiki/land.wikitext
@@ -95,12 +95,14 @@ From Middle English < Old English '''land''', '''lond''' (ground, soil, defined 
 # [[land]] (real estate).
 # the [[land]], the dry portion of the earth's surface.
 
+[[Category:1000 English basic words]]
+
 [[da:Land]]
 [[de:Land]]
+[[fr:Land]]
 [[it:land]]
 [[hu:land]]
 [[nl:land]]
 [[pl:Land]]
 [[fi:Land]]
 [[sv:land]]
-[[Category:1000 English basic words]]
