--- a/wiki/interpolatie.wikitext
+++ b/wiki/interpolatie.wikitext
@@ -1,9 +1,12 @@
 ===Zelfstandig naamwoord===
 '''interpolatie'''
-
-In wiskunde en wetenschap, '''interpolatie''' is het proces van het schatten van een functiewaarde in een punt die tussen bekende waarden in ligt.
+#In muziek, '''interpolatie''' is een aprubte verandering van elementen, met een (bijna onmiddelijke) voortgang van het eerste idee. (DeLone et. al. (Eds.), 1975, chap. 1)
+#In wiskunde en wetenschap, '''interpolatie''' is het proces van het schatten van een functiewaarde in een punt die tussen bekende waarden in ligt.
 
 ====Vertalingen====
 *Engels: [[interpolation]]
+
+===References===
+*DeLone et. al. (Eds.) (1975). Aspects of Twentieth-Century Music. Englewood Cliffs, New Jersey: Prentice-Hall. ISBN 0130493465.
 
 {{notenglish}}
