wikify and expand <city symphony#99274>

--- a/wiki/city_symphony.wikitext
+++ b/wiki/city_symphony.wikitext
@@ -1,1 +1,5 @@
-A genre of film, 1920's.
+==English==
+===Noun===
+'''[[city]] [[symphony]]'''
+# a [[genre]] of [[documentary]] [[film]] [[making]] from the 1920s and 1930s featuring [[scene]]s of city [[life]]
+#*See, for example, [[w:A Bronx Morning]]
