robot  Adding:fr <langsam#26055>

--- a/wiki/langsam.wikitext
+++ b/wiki/langsam.wikitext
@@ -7,3 +7,5 @@
 # slow/slowly, of limited progress ''Das Projekt geht nur langsam voran''
 
 [[Category:Nonstandard Wiktionary format]]
+
+[[fr:langsam]]
