--- a/wiki/interpolatie.wikitext
+++ b/wiki/interpolatie.wikitext
@@ -1,6 +1,6 @@
 ===Zelfstandig naamwoord===
 '''interpolatie'''
-#In muziek, '''interpolatie''' is een aprupte verandering van elementen, met een (bijna onmiddelijke) voortgang van het eerste idee. (DeLone et. al. (Eds.), 1975, chap. 1)
+#In muziek, '''interpolatie''' is een abrupte verandering van elementen, met een (bijna onmiddelijke) voortgang van het eerste idee. (DeLone et. al. (Eds.), 1975, chap. 1)
 #In wiskunde en wetenschap, '''interpolatie''' is het proces van het schatten van een functiewaarde in een punt die tussen bekende waarden in ligt.
 
 ====Vertalingen====
