robot  Adding:fi <large#41958>

--- a/wiki/large.wikitext
+++ b/wiki/large.wikitext
@@ -25,7 +25,9 @@
 #Large.
 #[[Generous]].
 
+[[Category:200 English basic words]]
+
 [[et:Large]]
 [[fr:large]]
 [[it:large]]
-[[Category:200 English basic words]]
+[[fi:Large]]
