--- a/wiki/Grignard_reagent.wikitext
+++ b/wiki/Grignard_reagent.wikitext
@@ -1,4 +1,5 @@
 ==English==
 ===Noun===
+{{wikipedia}}
 '''[[Grignard]] [[reagent]]'''
 #{{chemistry}} an [[alkyl]] or [[aryl]] [[magnesium]] [[halide]], used in the [[Grignard reaction]] to form [[substituted]] [[alcohol]]s; they are formed from alkyl or aryl halides and [[metallic]] magnesium
