--- a/wiki/aryl.wikitext
+++ b/wiki/aryl.wikitext
@@ -1,7 +1,8 @@
 ==English==
 
 ===Noun===
-
 '''aryl'''
 
-#An organic radical derived from an aromatic compound by removing a hydrogen atom.
+#{{chemistry}} Any [[univalent]] [[organic]] [[radical]] derived from an [[aromatic]] [[hydrocarbon]] by removing a [[hydrogen]] [[atom]]
+===See also===
+*[[alkyl]]
