robot  Adding:pl,sv,gl <latitude#94628>

--- a/wiki/latitude.wikitext
+++ b/wiki/latitude.wikitext
@@ -20,3 +20,7 @@
 *[[geographical latitude]]
 *[[high latitude]] <!--, that part of the earth's surface near either pole, esp. that part within either the arctic or the antarctic circle. -->
 *[[low latitude]]<!--, that part of the earth's surface which is near the equator. -->
+
+[[gl:Latitude]]
+[[pl:Latitude]]
+[[sv:latitude]]
