add ==English==, wikify <extrapolation#99275>

--- a/wiki/extrapolation.wikitext
+++ b/wiki/extrapolation.wikitext
@@ -1,8 +1,12 @@
+==English==
 ===Noun===
-
+{{wikipedia}}
 '''extrapolation'''
+#{{mathematics}} [[calculation]] of an [[estimate]] of the [[value]] of some [[function]] outside the [[range]] of [[known]] [[value]]s
+# an [[inference]] about some [[hypothetical]] [[situation]] based on [[known]] [[fact]]s
+===See also===
+*[[interpolation]]
 
-In mathematics and science, '''extrapolation''' is the process of estimating a function value in a point that is lying outside of a known interval.
-
-====Vertalingen====
+===Translations===
 *Dutch: [[extrapolatie]]
+[[category:English nouns]]
