robot  Adding:it <lava#33771>

--- a/wiki/lava.wikitext
+++ b/wiki/lava.wikitext
@@ -45,4 +45,5 @@ Italian ''lava'' lava, originally in [[Naples]], a [[torrent]] of [[rain]] overf
 #[[stage]], [[platform]]
 
 [[es:lava]]
+[[it:lava]]
 [[pl:Lava]]
