robot  Adding:nl <lax#97159>

--- a/wiki/lax.wikitext
+++ b/wiki/lax.wikitext
@@ -5,3 +5,5 @@
 #:''The rope fell '''lax'''.''
 #not [[strict]]; [[lenient]]; allowing for [[deviation]]
 #:''The rules are fairly '''lax''', but you have to know which ones you can bend.''
+
+[[nl:lax]]
