robot  Adding:pl <leaf#38261>

--- a/wiki/leaf.wikitext
+++ b/wiki/leaf.wikitext
@@ -133,6 +133,8 @@ The translations below might be out of synch with the definitions above. Would n
 
 #To look through a [[book]] without taking the words or story in; to [[turn]] [[pages]]
 
-[[it:leaf]]
 [[Category:English irregular plurals]]
 [[Category:1000 English basic words]]
+
+[[it:leaf]]
+[[pl:Leaf]]
