robot  Adding:et <lecture#57898>

--- a/wiki/lecture.wikitext
+++ b/wiki/lecture.wikitext
@@ -6,4 +6,5 @@ A [[lesson]] given usually by a [[professor]] (expert) to [[student]]s (beginner
 *Swedish: [[föreläsning]]
 *German: [[:de:Vorlesung|Vorlesung]], ''f''.
 
+[[et:Lecture]]
 [[it:lecture]]
