robot  Adding:pl,la <lector#92882>

--- a/wiki/lector.wikitext
+++ b/wiki/lector.wikitext
@@ -3,3 +3,6 @@
 '''lector''' (''plural'' '''lectors''')
 #A [[lay]] [[person]] who [[read]]s [[aloud]] certain [[religious]] [[text]]s in a [[church]] [[service]]
 #A [[public]] [[lecturer]] or [[reader]] at some [[universities]]
+
+[[la:Lector]]
+[[pl:Lector]]
