robot  Adding:it <legitimate#95829>

--- a/wiki/legitimate.wikitext
+++ b/wiki/legitimate.wikitext
@@ -17,3 +17,5 @@ Legitimate (Page: 841)
 ===Verb===
 {{en-infl-reg-vowel|legitimat|e}}
 # To make legitimate, lawful, or [[valid]]; especially, to put in the position or state of a legitimate person before the law, by legal means; as, to legitimate a [[bastard]] child.
+
+[[it:legitimate]]
