robot  Adding:it <legislative#95188>

--- a/wiki/legislative.wikitext
+++ b/wiki/legislative.wikitext
@@ -4,3 +4,5 @@
 '''legislative'''
 # Making, or having the power to make, a [[law]] or laws; [[lawmaking]]; -- distinguished from executive; as, a legislative act; a legislative body.
 # Of or pertaining to the making of laws; suitable to legislation; as, the transaction of legislative business; the legislative style.
+
+[[it:legislative]]
