robot  Adding:pl <let the cat out of the bag#97141>

--- a/wiki/let_the_cat_out_of_the_bag.wikitext
+++ b/wiki/let_the_cat_out_of_the_bag.wikitext
@@ -3,3 +3,5 @@
 '''[[let]] the [[cat]] [[out]] of the [[bag]]'''
 #{{idiom}} to [[disclose]] a [[secret]], often [[inadvertent]]ly
 #:''It was going to be a surprise party, until someone '''let the cat out of the bag.''
+
+[[pl:Let the cat out of the bag]]
